<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".AllezSportif">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/logoAction"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/logoaction" />


        <TextView
            android:id="@+id/nomExo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />


        <ImageButton
            android:id="@+id/btnSon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/sound_on"
            android:contentDescription="@string/setvolume"
            android:onClick="onChangeVolume"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>


    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/numSeance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/dblue_gradient"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/numRep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:background="@drawable/dblue_gradient"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/typeAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="100" />


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="@drawable/dblue_gradient"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/linearListeActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/blue_gradient">

        <Button
            android:id="@+id/pauseResume"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:backgroundTint="@color/transparent"
            android:onClick="onPauseResumeTimer"
            android:text="@string/commencer"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>


    <Button
        android:id="@+id/giveUp"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/red"
        android:onClick="onGiveUp"
        android:text="@string/abandonner"
        tools:ignore="UsingOnClickInXml" />


</LinearLayout>