<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Exo"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="50"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/purple_gradient"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/modifierExo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/settings"

                android:contentDescription="@string/settings" />

            <TextView
                android:id="@+id/Exo_nom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:visibility="visible"
                tools:ignore="NestedWeights" />


            <ImageView
                android:id="@+id/imgStar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="-1dp"
                android:background="@android:drawable/star_big_off"
                android:contentDescription="@string/favori"
                android:scaleType="centerCrop" />

        </LinearLayout>

        <TextView
            android:id="@+id/Exo_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/Exo_sport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/Exo_repos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/Exo_reps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/Exo_repos_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/Exo_seances"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/blue_gradient">

            <Button
                android:id="@+id/startExercice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:backgroundTint="@color/transparent"
                android:text="@string/commencer" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>